--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,10 +22,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-                <activity
-            android:name="com.kabe.donhackday2014.MangaActivity"   android:label="@string/app_name" >
+        <activity
+            android:name="com.kabe.donhackday2014.MangaActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        
+        <activity
+            android:name="com.kabe.donhackday2014.TakePhotoActivity"
+            android:label="@string/app_name" >
+                   <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
