--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,8 @@
          </activity>
         <activity
             android:name="com.kabe.donhackday2014.TakePhotoActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
         </activity>
     </application>
 
