--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="com.kabe.donhackday2014"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-sdk
@@ -24,17 +26,33 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-         </activity>
+        </activity>
         <activity
             android:name="com.kabe.donhackday2014.MangaActivity"
             android:label="@string/app_name" >
-         </activity>
+        </activity>
         <activity
             android:name="com.kabe.donhackday2014.TakePhotoActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance" >
         </activity>
-   
+        <activity
+            android:name="com.kabe.donhackday2014.UIGridViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kabe.donhackday2014.UIFlowViewAndCoverFlowActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.kacom.kabe.donhackday2014.UIListViewActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
+           <activity
+            android:name="com.kabe.donhackday2014.PagerActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+        </activity>
     </application>
 
 </manifest>
