--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,10 +20,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.kabe.donhackday2014.MainActivity"
+            android:launchMode="singleInstance"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
